--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -31,6 +35,7 @@ a:hover {
     margin-left: 5px;
     padding-top: 7px;
 }
+
 
 span {
     padding-left: 8px;
@@ -87,7 +92,7 @@ button {
     background-color: hsl(38, 85%, 50%);
 }
 
-.hero {
+#hero {
     width: 1300px;
     height: 500px;
 }
@@ -424,6 +429,11 @@ hr {
 
 li {
     opacity: 70%;
+}
+
+li:hover {
+    color: hsl(38, 100%, 50%);
+    cursor: pointer; 
 }
 
 ul {
