--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ html {
 section {
     padding-left: 185px;
     font-family: "Poppins", "Rubik", -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    /* margin: 0 auto; */
 }
 
 .nav-bar {
